--- a/views/_booking_management_header.erb
+++ b/views/_booking_management_header.erb
@@ -2,8 +2,8 @@
   <div class="col-sm-6 col-md-3">
     <a class="block block-link-hover3 text-center" href="javascript:void(0)">
       <div class="block-content block-content-full">
-        <div class="h3 font-w600 push-15-t"><span><%%= self.model.entityHooks[0].statusDescription[entity.status] %></span></div>
-        <div class="font-w600 push-15-t"><span class="fa fa-credit-card">&nbsp;</span><span><%%= self.model.entityHooks[0].paymentStatusDescription[entity.payment_status] %></span></div>
+        <div class="h3 font-w600 push-15-t"><span><%%= self.model.entityHooks[0].statusDescriptionText[entity.status] %></span></div>
+        <div class="font-w600 push-15-t"><span class="fa fa-credit-card">&nbsp;</span><span><%%= self.model.entityHooks[0].paymentStatusDescriptionText[entity.payment_status] %></span></div>
       </div>
       <div class="block-content block-content-full block-content-mini bg-gray-lighter font-w600"><span class="text-success">#<%%= entity.id %></span></div>
     </a>
