--- a/views/bookings_management.erb
+++ b/views/bookings_management.erb
@@ -114,6 +114,18 @@
 
 
       <div class="row">
+        <div class="col-lg-12">
+          <div class="block  text-center">
+            <div class="block-content block-content-full">
+              <%= partial :booking_management_actions %>
+              <div style="line-height:8px">&nbsp;</div>
+            </div>
+            <div class="block-content block-content-full block-content-mini bg-gray-lighter text-muted font-w600">Acciones</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
         <div class="col-lg-6">
           <div class="block">
             <div class="block-header bg-gray-lighter">
