--- a/views/bookings_management.erb
+++ b/views/bookings_management.erb
@@ -360,6 +360,22 @@
         </div>
       </div>
 
+      <!-- Activity -->
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="block">
+            <div class="block-header bg-gray-lighter">
+                <h3 class="block-title">Actividad</h3>
+            </div>
+            <div id="newsfeed_container" class="block-content block-content-full">
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
      </form>
 
      <div id="complements">
