--- a/views/_booking_management_destination_address.erb
+++ b/views/_booking_management_destination_address.erb
@@ -1,5 +1,6 @@
-<form name="flight" style="height:208px">
-   <textarea rows="8" name="destination_accommodation" id="destination_accommodation" style="width:100%"><%%=entity.destination_accommodation%></textarea>
+<form name="destination_accommodation_form" style="height:208px">
+  <input type="hidden" name="id" value="<%%=entity.id%>"/>
+  <textarea rows="8" name="destination_accommodation" id="destination_accommodation" style="width:100%"><%%=entity.destination_accommodation%></textarea>
   <div class="navigation-bar bottom-margin top-margin">
     <div class="navigation-bar-crud-buttons right-float right-margin">
       <input type="submit" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
