--- a/views/config_booking_business.erb
+++ b/views/config_booking_business.erb
@@ -60,6 +60,31 @@
       <div class="col-sm-12 col-md-10 col-md-offset-1">
         <div class="block ">
           <div class="block-header bg-gray-lighter">
+            <h3 class="block-title"><%=t.booking_front_end.engine.title%></h3>
+          </div>
+          <div class="block-content block-content-narrow">
+            <form name="variables" action="/api/variables" method="PUT"
+                  data-remote="ajax" data-remote-method="PUT" class="form-horizontal">
+              <%= render_variable_checkbox_boolean('booking.inner_reservation_engine',
+                                                   t.booking_front_end.engine.inner_label) %>
+              <p class="less_contrast_text smaller_text"><%=t.booking_front_end.engine.inner_description%></p>
+              <%= render_variable_input_text('booking.front_end_prefix',
+                                             t.booking_front_end.engine.external_web_prefix_url, 80, 40) %>
+              <div class="form-group">
+                <div class="col-xs-12">
+                  <button class="button btn btn-sm btn-primary pull-right" type="submit"><i class="fa fa-save push-5-r"></i> <%=t.entitymanagement.update%></button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-12 col-md-10 col-md-offset-1">
+        <div class="block ">
+          <div class="block-header bg-gray-lighter">
             <h3 class="block-title"><%=t.booking_front_end.languages_title%></h3>
           </div>
           <div class="block-content block-content-narrow">
@@ -78,6 +103,7 @@
         </div>
       </div>
     </div>
+
 
   </div>
 </div>
