--- a/views/booking_pickup_return_places_management.js.erb
+++ b/views/booking_pickup_return_places_management.js.erb
@@ -23,7 +23,7 @@ require(["jquery", "YSDEntityManagement", "YSDRemoteDataSource", "YSDSelectSelec
   
     onNew : function() {
       $('#name').focus();
-      this.configForm(entity);
+      this.configForm(null);
     },
 
     configForm: function(entity) {
