--- a/views/_booking_management_customer.erb
+++ b/views/_booking_management_customer.erb
@@ -1,13 +1,13 @@
-          <form name="customer">
+          <form name="customer" class="form-inline">
             <input type="hidden" name="id" value="<%%=entity.id%>"/>
             <div class="element_template">
               <div class="entity-field">
                 <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.customer_name %><span class="mandatoryfield">*</span></span>
                 <span class="entity-fieldvalue">
                     <input type="text" maxlength="40" size="12" name="customer_name" id="customer_name"
-                      value="<%%=entity.customer_name%>"/>
+                      value="<%%=entity.customer_name%>" class="form-control"/>
                     <input type="text" maxlength="40" size="13" name="customer_surname" id="customer_surname"
-                      value="<%%=entity.customer_surname%>"/>
+                      value="<%%=entity.customer_surname%>" class="form-control"/>
                 </span>
               </div>
             </div>
@@ -16,9 +16,9 @@
                 <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.customer_phone %></span>
                 <span class="entity-fieldvalue">
                     <input type="text" maxlength="15" size="12" name="customer_phone" id="customer_phone"
-                      value="<%%=entity.customer_phone%>"/>
+                      value="<%%=entity.customer_phone%>" class="form-control"/>
                     <input type="text" maxlength="15" size="13" name="customer_mobile_phone" id="customer_mobile_phone"
-                      value="<%%=entity.customer_mobile_phone%>"/>
+                      value="<%%=entity.customer_mobile_phone%>" class="form-control"/>
                 </span>
               </div>
             </div>
@@ -26,15 +26,21 @@
               <div class="entity-field">
                 <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.customer_email %></span>
                 <span class="entity-fieldvalue">
-                    <input type="text" maxlength="40" size="35" name="customer_email" id="customer_email"
+                    <input type="text" maxlength="40" size="35" name="customer_email" id="customer_email" class="form-control"
                       value="<%%=entity.customer_email%>"/>
                 </span>
               </div>
             </div>
-            <div class="element_template" style="display:none">
+            <div class="element_template">
               <div class="entity-field">
                 <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.customer_language %></span>
-                <span class="entity-fieldvalue"><%%= entity.customer_language %></span>
+                <span class="entity-fieldvalue">
+                  <select name="customer_language" class="form-control" style="width: 100%">
+                    <% @languages.each do |item| %>
+                      <option value="<%=item.code%>" <%% if (entity.customer_language == '<%=item.code%>' || '<%=@default_language%>'=='<%=item.code%>'){%>selected<%%}%>><%=item.description%></option>
+                    <% end %>
+                  </select>
+                </span>
               </div>
             </div>
             <div class="navigation-bar bottom-margin">
