--- a/views/bookings_management.js.erb
+++ b/views/bookings_management.js.erb
@@ -85,94 +85,10 @@ require(['jquery', 'YSDEntityManagement','YSDRemoteDataSource', 'YSDSelectSelect
       <% end %>
     }
 
-    this.setupDates = function(entity) {
-        $.datepicker.setDefaults( $.datepicker.regional["<%=session[:locale] || 'es'%>" ] );
-
-        $('#driver_date_of_birth').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', maxDate: new Date(), defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
-        if (entity.driver_date_of_birth != null) {
-            $('#driver_date_of_birth').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.driver_date_of_birth, 'dd/MM/yyyy')));
-        }
-
-        $('#driver_document_id_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', maxDate: new Date(), defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
-        if (entity.driver_document_id_date != null) {
-            $('#driver_document_id_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.driver_document_id_date, 'dd/MM/yyyy')));
-        }
-
-        $('#driver_document_id_expiration_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
-        if (entity.driver_document_id_date != null) {
-            $('#driver_document_id_expiration_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.driver_document_id_expiration_date, 'dd/MM/yyyy')));
-        }
-
-        $('#driver_driving_license_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', maxDate: new Date(), defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
-        if (entity.driver_driving_license_date != null) {
-            $('#driver_driving_license_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.driver_driving_license_date, 'dd/MM/yyyy')));
-        }
-
-        $('#driver_driving_license_expiration_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
-        if (entity.driver_driving_license_expiration_date != null) {
-            $('#driver_driving_license_expiration_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.driver_driving_license_expiration_date, 'dd/MM/yyyy')));
-        }
-
-        $('#additional_driver_1_date_of_birth').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', maxDate: new Date(), defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
-        if (entity.additional_driver_1_date_of_birth != null) {
-            $('#additional_driver_1_date_of_birth').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.additional_driver_1_date_of_birth, 'dd/MM/yyyy')));
-        }
-
-        $('#additional_driver_1_document_id_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', maxDate: new Date(), defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
-        if (entity.additional_driver_1_document_id_date != null) {
-            $('#additional_driver_1_document_id_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.additional_driver_1_document_id_date, 'dd/MM/yyyy')));
-        }
-
-        $('#additional_driver_1_document_id_expiration_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
-        if (entity.additional_driver_1_document_id_expiration_date != null) {
-            $('#additional_driver_1_document_id_expiration_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.additional_driver_1_document_id_expiration_date, 'dd/MM/yyyy')));
-        }
-
-        $('#additional_driver_1_driving_license_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', maxDate: new Date(), defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
-        if (entity.additional_driver_1_driving_license_date != null) {
-            $('#additional_driver_1_driving_license_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.additional_driver_1_driving_license_date, 'dd/MM/yyyy')));
-        }
-
-        $('#additional_driver_1_driving_license_expiration_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
-        if (entity.additional_driver_1_driving_license_expiration_date != null) {
-            $('#additional_driver_1_driving_license_expiration_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.additional_driver_1_driving_license_expiration_date, 'dd/MM/yyyy')));
-        }
-
-        $('#additional_driver_2_date_of_birth').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', maxDate: new Date(), defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
-        if (entity.additional_driver_2_date_of_birth != null) {
-            $('#additional_driver_2_date_of_birth').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.additional_driver_2_date_of_birth, 'dd/MM/yyyy')));
-        }
-
-        $('#additional_driver_2_document_id_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', maxDate: new Date(), defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
-        if (entity.additional_driver_2_document_id_date != null) {
-            $('#additional_driver_2_document_id_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.additional_driver_2_document_id_date, 'dd/MM/yyyy')));
-        }
-
-        $('#additional_driver_2_document_id_expiration_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
-        if (entity.additional_driver_2_document_id_expiration_date != null) {
-            $('#additional_driver_2_document_id_expiration_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.additional_driver_2_document_id_expiration_date, 'dd/MM/yyyy')));
-        }
-
-        $('#additional_driver_2_driving_license_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', maxDate: new Date(), defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
-        if (entity.additional_driver_2_driving_license_date != null) {
-            $('#additional_driver_2_driving_license_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.additional_driver_2_driving_license_date, 'dd/MM/yyyy')));
-        }
-
-        $('#additional_driver_2_driving_license_expiration_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
-        if (entity.additional_driver_2_driving_license_expiration_date != null) {
-            $('#additional_driver_2_driving_license_expiration_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.additional_driver_2_driving_license_expiration_date, 'dd/MM/yyyy')));
-        }
-
-        $('#external_invoice_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', maxDate: new Date(), defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
-        if (entity.external_invoice_date != null) {
-            $('#external_invoice_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.external_invoice_date, 'dd/MM/yyyy')));
-        }
-    }
-
     this.onEdit = function(entity) {
 
       this.configForm(entity);
-      this.setupDates(entity);
+      this.configDates(entity);
 
       // Validation
       this.configValidations();
@@ -348,53 +264,8 @@ require(['jquery', 'YSDEntityManagement','YSDRemoteDataSource', 'YSDSelectSelect
         self.prepareFormEditBookingExtraItemCost(id, value);
       });
 
-
       // Configure resources auto edition
-      $('.resource_user_name').bind('blur', function() {
-          self.updateLineResource($(this)[0]);
-      });
-      $('.resource_user_surname').bind('blur', function() {
-          self.updateLineResource($(this)[0]);
-      });
-      $('.resource_user_document_id').bind('blur', function() {
-          self.updateLineResource($(this)[0]);
-      });
-      $('.resource_user_phone').bind('blur', function() {
-          self.updateLineResource($(this)[0]);
-      });
-      $('.resource_user_email').bind('blur', function() {
-          self.updateLineResource($(this)[0]);
-      });
-      $('.customer_height').bind('change', function() {
-          self.updateLineResource($(this)[0]);
-      });
-      $('.customer_weight').bind('change', function() {
-          self.updateLineResource($(this)[0]);
-      });
-      $('.resource_user_2_name').bind('blur', function() {
-          self.updateLineResource($(this)[0]);
-      });
-      $('.resource_user_2_surname').bind('blur', function() {
-          self.updateLineResource($(this)[0]);
-      });
-      $('.resource_user_2_document_id').bind('blur', function() {
-          self.updateLineResource($(this)[0]);
-      });
-      $('.resource_user_2_phone').bind('blur', function() {
-          self.updateLineResource($(this)[0]);
-      });
-      $('.resource_user_2_email').bind('blur', function() {
-          self.updateLineResource($(this)[0]);
-      });
-      $('.customer_2_height').bind('change', function() {
-          self.updateLineResource($(this)[0]);
-      });
-      $('.customer_2_weight').bind('change', function() {
-          self.updateLineResource($(this)[0]);
-      });
-      $('.booking_item_reference').bind('change', function() {
-          self.updateLineResource($(this)[0]);
-      });
+      this.configResourcesAutoEdition();
 
       $('.booking_item_reference_detail').bind('click', function() {
         var form = $(this)[0].form;
@@ -435,6 +306,92 @@ require(['jquery', 'YSDEntityManagement','YSDRemoteDataSource', 'YSDSelectSelect
 
     }
 
+    this.configDates = function(entity) {
+
+        $.datepicker.setDefaults( $.datepicker.regional["<%=session[:locale] || 'es'%>" ] );
+
+        $('#driver_date_of_birth').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', maxDate: new Date(), defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
+        if (entity.driver_date_of_birth != null) {
+            $('#driver_date_of_birth').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.driver_date_of_birth, 'dd/MM/yyyy')));
+        }
+
+        $('#driver_document_id_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', maxDate: new Date(), defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
+        if (entity.driver_document_id_date != null) {
+            $('#driver_document_id_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.driver_document_id_date, 'dd/MM/yyyy')));
+        }
+
+        $('#driver_document_id_expiration_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
+        if (entity.driver_document_id_expiration_date != null) {
+            $('#driver_document_id_expiration_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.driver_document_id_expiration_date, 'dd/MM/yyyy')));
+        }
+
+        $('#driver_driving_license_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', maxDate: new Date(), defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
+        if (entity.driver_driving_license_date != null) {
+            $('#driver_driving_license_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.driver_driving_license_date, 'dd/MM/yyyy')));
+        }
+
+        $('#driver_driving_license_expiration_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
+        if (entity.driver_driving_license_expiration_date != null) {
+            $('#driver_driving_license_expiration_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.driver_driving_license_expiration_date, 'dd/MM/yyyy')));
+        }
+
+        $('#additional_driver_1_date_of_birth').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', maxDate: new Date(), defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
+        if (entity.additional_driver_1_date_of_birth != null) {
+            $('#additional_driver_1_date_of_birth').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.additional_driver_1_date_of_birth, 'dd/MM/yyyy')));
+        }
+
+        $('#additional_driver_1_document_id_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', maxDate: new Date(), defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
+        if (entity.additional_driver_1_document_id_date != null) {
+            $('#additional_driver_1_document_id_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.additional_driver_1_document_id_date, 'dd/MM/yyyy')));
+        }
+
+        $('#additional_driver_1_document_id_expiration_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
+        if (entity.additional_driver_1_document_id_expiration_date != null) {
+            $('#additional_driver_1_document_id_expiration_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.additional_driver_1_document_id_expiration_date, 'dd/MM/yyyy')));
+        }
+
+        $('#additional_driver_1_driving_license_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', maxDate: new Date(), defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
+        if (entity.additional_driver_1_driving_license_date != null) {
+            $('#additional_driver_1_driving_license_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.additional_driver_1_driving_license_date, 'dd/MM/yyyy')));
+        }
+
+        $('#additional_driver_1_driving_license_expiration_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
+        if (entity.additional_driver_1_driving_license_expiration_date != null) {
+            $('#additional_driver_1_driving_license_expiration_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.additional_driver_1_driving_license_expiration_date, 'dd/MM/yyyy')));
+        }
+
+        $('#additional_driver_2_date_of_birth').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', maxDate: new Date(), defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
+        if (entity.additional_driver_2_date_of_birth != null) {
+            $('#additional_driver_2_date_of_birth').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.additional_driver_2_date_of_birth, 'dd/MM/yyyy')));
+        }
+
+        $('#additional_driver_2_document_id_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', maxDate: new Date(), defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
+        if (entity.additional_driver_2_document_id_date != null) {
+            $('#additional_driver_2_document_id_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.additional_driver_2_document_id_date, 'dd/MM/yyyy')));
+        }
+
+        $('#additional_driver_2_document_id_expiration_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
+        if (entity.additional_driver_2_document_id_expiration_date != null) {
+            $('#additional_driver_2_document_id_expiration_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.additional_driver_2_document_id_expiration_date, 'dd/MM/yyyy')));
+        }
+
+        $('#additional_driver_2_driving_license_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', maxDate: new Date(), defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
+        if (entity.additional_driver_2_driving_license_date != null) {
+            $('#additional_driver_2_driving_license_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.additional_driver_2_driving_license_date, 'dd/MM/yyyy')));
+        }
+
+        $('#additional_driver_2_driving_license_expiration_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
+        if (entity.additional_driver_2_driving_license_expiration_date != null) {
+            $('#additional_driver_2_driving_license_expiration_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.additional_driver_2_driving_license_expiration_date, 'dd/MM/yyyy')));
+        }
+
+        $('#external_invoice_date').datepicker({numberOfMonths:1, dateFormat: 'dd/mm/yy', maxDate: new Date(), defaultDate: ''}, "<%=session[:locale] || 'es'%>" );
+        if (entity.external_invoice_date != null) {
+            $('#external_invoice_date').datepicker("setDate", $.datepicker.parseDate("dd/mm/yy", bookingManager.view.formatDate(entity.external_invoice_date, 'dd/MM/yyyy')));
+        }
+    }
+
+
     this.configValidations = function() {
 
         this.configCustomerValidation();
@@ -442,6 +399,57 @@ require(['jquery', 'YSDEntityManagement','YSDRemoteDataSource', 'YSDSelectSelect
         this.configAdditionalDriverValidation();
         this.configRealPickupReturnValidation();
 
+    }
+
+    this.configResourcesAutoEdition = function() {
+
+        var self = this;
+
+        $('.resource_user_name').bind('blur', function() {
+            self.updateLineResource($(this)[0]);
+        });
+        $('.resource_user_surname').bind('blur', function() {
+            self.updateLineResource($(this)[0]);
+        });
+        $('.resource_user_document_id').bind('blur', function() {
+            self.updateLineResource($(this)[0]);
+        });
+        $('.resource_user_phone').bind('blur', function() {
+            self.updateLineResource($(this)[0]);
+        });
+        $('.resource_user_email').bind('blur', function() {
+            self.updateLineResource($(this)[0]);
+        });
+        $('.customer_height').bind('change', function() {
+            self.updateLineResource($(this)[0]);
+        });
+        $('.customer_weight').bind('change', function() {
+            self.updateLineResource($(this)[0]);
+        });
+        $('.resource_user_2_name').bind('blur', function() {
+            self.updateLineResource($(this)[0]);
+        });
+        $('.resource_user_2_surname').bind('blur', function() {
+            self.updateLineResource($(this)[0]);
+        });
+        $('.resource_user_2_document_id').bind('blur', function() {
+            self.updateLineResource($(this)[0]);
+        });
+        $('.resource_user_2_phone').bind('blur', function() {
+            self.updateLineResource($(this)[0]);
+        });
+        $('.resource_user_2_email').bind('blur', function() {
+            self.updateLineResource($(this)[0]);
+        });
+        $('.customer_2_height').bind('change', function() {
+            self.updateLineResource($(this)[0]);
+        });
+        $('.customer_2_weight').bind('change', function() {
+            self.updateLineResource($(this)[0]);
+        });
+        $('.booking_item_reference').bind('change', function() {
+            self.updateLineResource($(this)[0]);
+        });
     }
 
     this.configCustomerValidation = function() {
